chapter14/yaml/gitlab-shell-write.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-write-shell
  namespace: gitlab
spec:
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 2222
  selector:
    app: gitlab-shell
    release: gitlab
  sessionAffinity: None
  type: ClusterIP
