chapter14/yaml/mariadb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mariadb
  name: mariadb
  namespace: mariadb
spec:
  serviceName: mariadb
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mariadb
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: start123
        - name: MYSQL_DATABASE
          value: unison
        - name: MYSQL_USER
          value: unison
        - name: MYSQL_PASSWORD
          value: startt123
        image: mariadb
        imagePullPolicy: Always
        name: mariadb
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: mariadb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2019-09-11T01:37:40Z"
  labels:
    app: mariadb
  name: mariadb
  namespace: mariadb
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mariadb
  sessionAffinity: None
  type: ClusterIP
